--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,22 +17,17 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Create virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Print debugging information
         run: |
           echo "Python Version: $(python --version)"
           echo "Working Directory: $(pwd)"
-          echo "Contents of Working Directory: $(ls -l)"
-          ls -l venv/lib/python*/site-packages || true
+          echo "Contents of Working Directory:"
+          ls -l
 
   test:
     needs: build
@@ -47,17 +42,11 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Create virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          source venv/bin/activate
           python -m unittest discover -s tests -p 'test_*.py'
